[package]
name = "tcn-node"
version = "0.3.0-alpha.4"
authors = ["David Rolle <miridius@miridi.us>"]
license = "Apache-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "tcn_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "^0.4"
neon-serde = { git = "https://github.com/miridius/neon-serde", branch = "use-neon-0.4" }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
tcn = { git = "https://github.com/miridius/TCN", branch = "serde" }
